--- a/frontend/src/pages/CreateProject/CreateProject.styl
+++ b/frontend/src/pages/CreateProject/CreateProject.styl
@@ -10,6 +10,7 @@
       width: 216px// to be the same size as two buttons to align .toggle perfectly to the center
       margin-right: auto
       margin-bottom: 0
+      margin-top 0
       font-size: 20px
     button
       line-height: 1em
